--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "homepage": "https://feliperuizm.github.io/amazonian-tiles",
   "private": true,
   "dependencies": {
+    "@react-email/render": "^0.0.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-icons": "^1.10.3",
